# interfaces

./: CMakeLists.txt  README.md  __init__.py
interface-libs/: CMakeLists.txt
interface_libs/: CMakeLists.txt
libs/: CMakeLists.txt
obc_gs_interface/: __init__.py
obc_gs_interface/ax25/: obc_gs_ax25.c
obc_gs_interface/commands/inc/: ci_cd_test.h  obc_gs_command_data.h  obc_gs_command_id.h
obc_gs_interface/commands/python/: __init__.py  command_factories.py  command_response_callbacks.py  command_response_classes.py
obc_gs_interface/commands/src/: obc_gs_command_pack.c  obc_gs_command_unpack.c
obc_gs_interface/telemetry/: obc_gs_telemetry_id.h  obc_gs_telemetry_unpack.c
utils/: command_utils.py  validate_coords.py
